--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
 
             <h4>Nos Services Exceptionnels :</h4>
             <ul>
-                <li>-Coupes de cheveux tendance</li>
-                <li>-Taille de barbe précise</li>
-                <li>-Rasage à l'ancienne</li>
+                <li>Coupes de cheveux tendance</li>
+                <li>Taille de barbe précise</li>
+                <li>Rasage à l'ancienne</li>
             </ul><br>
             <p>Au Barber Shop 212, nous comprenons l’importance de l’authenticité. Chaque coiffeur barbier de notre équipe est dévoué à créer un look qui vous représente. Notre salon offre une atmosphère chaleureuse et décontractée où vous pouvez vous détendre tout en confiant votre style à nos mains expertes.</p>
 
             <h4>Pourquoi Barber Shop 212 ?</h4>
             <ul>
-                <li>-Expetise locole en coiffure masculine</li>
-                <li>-Emplacement stratégique à Louvain-La-Neuve</li>
-                <li>-Passion pour l'art du barbier</li>
-                <li>-Chaque coupe est une déclaration de style</li>
+                <li>Expetise locole en coiffure masculine</li>
+                <li>Emplacement stratégique à Louvain-La-Neuve</li>
+                <li>Passion pour l'art du barbier</li>
+                <li>Chaque coupe est une déclaration de style</li>
             </ul><br>
             <p>Découvrez la différence Barber Shop 212 dès aujourd’hui.</p><br>
             <p>Réservez votre rendez-vous pour une expérience de coiffure exceptionnelle et un style qui vous distingue.</p>
